--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,14 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Poiret+One&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Poiret+One&display=swap"); */
+@import url("https://fonts.googleapis.com/css2?family=Poiret+One&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 html,
 body {
   background-color: white !important;
-  font-family: "Montserrat", "Poiret One", -apple-system, BlinkMacSystemFont,
+  font-family: "Poppins", "Poiret One", -apple-system, BlinkMacSystemFont,
     Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
     Helvetica Neue, sans-serif;
+  overflow-x: hidden;
 }
 
 a {
