--- a/styles/custom.css
+++ b/styles/custom.css
@@ -26,3 +26,54 @@
   background-position: bottom left;
   background-attachment: initial;
 }
+
+/* form loading spinner */
+@keyframes ldio-8zy9x4p1een {
+  0% {
+    top: 96px;
+    left: 96px;
+    width: 0;
+    height: 0;
+    opacity: 1;
+  }
+  100% {
+    top: 18px;
+    left: 18px;
+    width: 156px;
+    height: 156px;
+    opacity: 0;
+  }
+}
+.ldio-8zy9x4p1een div {
+  position: absolute;
+  border-width: 4px;
+  border-style: solid;
+  opacity: 1;
+  border-radius: 50%;
+  animation: ldio-8zy9x4p1een 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+}
+.ldio-8zy9x4p1een div:nth-child(1) {
+  border-color: #161e29;
+  animation-delay: 0s;
+}
+.ldio-8zy9x4p1een div:nth-child(2) {
+  border-color: #dd2d50;
+  animation-delay: -0.5s;
+}
+.loadingio-spinner-ripple-ws3exx9ngs {
+  width: 200px;
+  height: 200px;
+  display: inline-block;
+  overflow: hidden;
+}
+.ldio-8zy9x4p1een {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  transform: translateZ(0) scale(1);
+  backface-visibility: hidden;
+  transform-origin: 0 0;
+}
+.ldio-8zy9x4p1een div {
+  box-sizing: content-box;
+}
