finished navbar avatar + logout functionality

--- a/styles/custom.css
+++ b/styles/custom.css
@@ -27,7 +27,7 @@
   background-attachment: initial;
 }
 
-/* form loading spinner */
+/* auth form loading spinner */
 @keyframes ldio-8zy9x4p1een {
   0% {
     top: 96px;
